--- a/product.html
+++ b/product.html
@@ -201,13 +201,58 @@
       <div class="product__promo__content">
         <div class="product__promo__menu">
           <details class="product__promo__menu__list">
-            <summary class="product__promo__menu__link product__promo__menu__link1">Category</summary>
+            <summary class="product__promo__menu__link">Category</summary>
+            <div class="dropdown__menu product__promo__dropdown">
+              <a class="dropdown__menu__item" href="#">Accessories</a>
+              <a class="dropdown__menu__item" href="#">Bags</a>
+              <a class="dropdown__menu__item" href="#">Denim</a>
+              <a class="dropdown__menu__item" href="#">Hoodies & Sweatshirts</a>
+              <a class="dropdown__menu__item" href="#">Jackets & Coats</a>
+              <a class="dropdown__menu__item" href="#">Pants</a>
+              <a class="dropdown__menu__item" href="#">Polos</a>
+              <a class="dropdown__menu__item" href="#">Shirts</a>
+              <a class="dropdown__menu__item" href="#">Shoes</a>
+              <a class="dropdown__menu__item" href="#">Shorts</a>
+              <a class="dropdown__menu__item" href="#">Sweaters & Knits</a>
+              <a class="dropdown__menu__item" href="#">T-Shirts</a>
+              <a class="dropdown__menu__item" href="#">Tanks</a>
+            </div>
           </details>
           <details class="product__promo__menu__list">
-            <summary class="product__promo__menu__link product__promo__menu__link2">Brand</summary>
+            <summary class="product__promo__menu__link">Brand</summary>
+            <div class="dropdown__menu product__promo__dropdown">
+              <a class="dropdown__menu__item" href="#">Accessories</a>
+              <a class="dropdown__menu__item" href="#">Bags</a>
+              <a class="dropdown__menu__item" href="#">Denim</a>
+              <a class="dropdown__menu__item" href="#">Hoodies & Sweatshirts</a>
+              <a class="dropdown__menu__item" href="#">Jackets & Coats</a>
+              <a class="dropdown__menu__item" href="#">Pants</a>
+              <a class="dropdown__menu__item" href="#">Polos</a>
+              <a class="dropdown__menu__item" href="#">Shirts</a>
+              <a class="dropdown__menu__item" href="#">Shoes</a>
+              <a class="dropdown__menu__item" href="#">Shorts</a>
+              <a class="dropdown__menu__item" href="#">Sweaters & Knits</a>
+              <a class="dropdown__menu__item" href="#">T-Shirts</a>
+              <a class="dropdown__menu__item" href="#">Tanks</a>
+            </div>
           </details>
           <details class="product__promo__menu__list">
-            <summary class="product__promo__menu__link product__promo__menu__link3">designer</summary>
+            <summary class="product__promo__menu__link">designer</summary>
+            <div class="dropdown__menu product__promo__dropdown">
+              <a class="dropdown__menu__item" href="#">Accessories</a>
+              <a class="dropdown__menu__item" href="#">Bags</a>
+              <a class="dropdown__menu__item" href="#">Denim</a>
+              <a class="dropdown__menu__item" href="#">Hoodies & Sweatshirts</a>
+              <a class="dropdown__menu__item" href="#">Jackets & Coats</a>
+              <a class="dropdown__menu__item" href="#">Pants</a>
+              <a class="dropdown__menu__item" href="#">Polos</a>
+              <a class="dropdown__menu__item" href="#">Shirts</a>
+              <a class="dropdown__menu__item" href="#">Shoes</a>
+              <a class="dropdown__menu__item" href="#">Shorts</a>
+              <a class="dropdown__menu__item" href="#">Sweaters & Knits</a>
+              <a class="dropdown__menu__item" href="#">T-Shirts</a>
+              <a class="dropdown__menu__item" href="#">Tanks</a>
+            </div>
           </details>
         </div>
         <div class="product__promo__price">
