--- a/index.html
+++ b/index.html
@@ -16,38 +16,38 @@
         <div class="container header__flex">
             <div class="header__left">
                 <a class="" href="#"><img src="./build/img/logo.png" alt="logo"></a>
-                <a class="logo__text" href="#">BRAN<span class="other-color">D</span></a>
+                <a class="header__logo href=" #">BRAN<span class="header__logo_other-color">D</span></a>
                 <form class="header__form" action="#">
-                    <details class="form__browse">
-                        <summary class="summary__search">Browse</summary>
+                    <details class="header__form_browse">
+                        <summary class="header__summary-search">Browse</summary>
                         <div class="dropdown__menu">
-                            <h3 class="dropdown__menu__heading">women</h3>
-                            <a class="dropdown__menu__item" href="#">Dresses</a>
-                            <a class="dropdown__menu__item" href="#">Tops</a>
-                            <a class="dropdown__menu__item" href="#">Sweaters/Knits</a>
-                            <a class="dropdown__menu__item" href="#">Jackets/Coats</a>
-                            <a class="dropdown__menu__item" href="#">Blazers</a>
-                            <a class="dropdown__menu__item" href="#">Denim</a>
-                            <a class="dropdown__menu__item" href="#">Leggings/Pants</a>
-                            <a class="dropdown__menu__item" href="#">Skirts/Shorts</a>
-                            <a class="dropdown__menu__item" href="#">Accessories</a>
-                            <a class="dropdown__menu__item" href="#">Bags/Purses</a>
-                            <a class="dropdown__menu__item" href="#">Swimwear/Underwear</a>
-                            <a class="dropdown__menu__item" href="#">Nightwear</a>
-                            <a class="dropdown__menu__item" href="#">Shoes</a>
-                            <a class="dropdown__menu__item" href="#">Beauty</a>
-                            <h3 class="dropdown__menu__heading">men</h3>
-                            <a class="dropdown__menu__item" href="#">Tees/Tank tops</a>
-                            <a class="dropdown__menu__item" href="#">Shirts/Polos</a>
-                            <a class="dropdown__menu__item" href="#">Sweaters</a>
-                            <a class="dropdown__menu__item" href="#">Sweatshirts/Hoodies</a>
-                            <a class="dropdown__menu__item" href="#">Blazers</a>
-                            <a class="dropdown__menu__item" href="#">Jackets/vests</a>
+                            <h3 class="dropdown__menu_heading">women</h3>
+                            <a class="dropdown__menu_item" href="#">Dresses</a>
+                            <a class="dropdown__menu_item" href="#">Tops</a>
+                            <a class="dropdown__menu_item" href="#">Sweaters/Knits</a>
+                            <a class="dropdown__menu_item" href="#">Jackets/Coats</a>
+                            <a class="dropdown__menu_item" href="#">Blazers</a>
+                            <a class="dropdown__menu_item" href="#">Denim</a>
+                            <a class="dropdown__menu_item" href="#">Leggings/Pants</a>
+                            <a class="dropdown__menu_item" href="#">Skirts/Shorts</a>
+                            <a class="dropdown__menu_item" href="#">Accessories</a>
+                            <a class="dropdown__menu_item" href="#">Bags/Purses</a>
+                            <a class="dropdown__menu_item" href="#">Swimwear/Underwear</a>
+                            <a class="dropdown__menu_item" href="#">Nightwear</a>
+                            <a class="dropdown__menu_item" href="#">Shoes</a>
+                            <a class="dropdown__menu_item" href="#">Beauty</a>
+                            <h3 class="dropdown__menu_heading">men</h3>
+                            <a class="dropdown__menu_item" href="#">Tees/Tank tops</a>
+                            <a class="dropdown__menu_item" href="#">Shirts/Polos</a>
+                            <a class="dropdown__menu_item" href="#">Sweaters</a>
+                            <a class="dropdown__menu_item" href="#">Sweatshirts/Hoodies</a>
+                            <a class="dropdown__menu_item" href="#">Blazers</a>
+                            <a class="dropdown__menu_item" href="#">Jackets/vests</a>
                         </div>
                     </details>
                     <input class="header__text" type=search placeholder="Search for Item...">
-                    <button class="button__search"><img class="button__lens" src="./build/img/search-solid.svg"
-                            alt="search">
+                    <button class="header__button-search"><img class="header__button-lens"
+                            src="./build/img/search-solid.svg" alt="search">
                     </button>
                 </form>
             </div>
@@ -59,7 +59,7 @@
             </div>
         </div>
     </header>
-    <nav class="header__nav">
+    <nav class="header-nav">
         <div class="container">
             <ul class="menu">
                 <li class="menu__list"><a href="#" class="menu__link"></a>Home</li>
@@ -428,8 +428,8 @@
             <div class="footer__list1">
                 <div class="footer__item">
                     <div class="footer__item__logo">
-                        <a class="" href="#"><img src="./build/img/logo.png" alt="logo"></a>
-                        <a class="logo__text" href="#">BRAN<span class="other-color">D</span></a>
+                        <a href="#"><img src="./build/img/logo.png" alt="logo"></a>
+                        <a class="header__logo" href="#">BRAN<span class="header__logo_other-color">D</span></a>
                     </div>
                     <p class="footer__item__text">Objectively transition extensive data rather than cross functional
                         solutions. Monotonectally
