--- a/product.html
+++ b/product.html
@@ -16,37 +16,38 @@
     <div class="container header__flex">
       <div class="header__left">
         <a class="" href="index.html"><img src="./build/img/logo.png" alt="logo"></a>
-        <a class="logo__text" href="index.html">BRAN<span class="other-color">D</span></a>
+        <a class="header__logo" href="index.html">BRAN<span class="header__logo_other-color">D</span></a>
         <form class="header__form" action="#">
-          <details class="form__browse">
-            <summary class="summary__search">Browse</summary>
+          <details class="header__form_browse">
+            <summary class="header__summary-search">Browse</summary>
             <div class="dropdown__menu">
-              <h3 class="dropdown__menu__heading">women</h3>
-              <a class="dropdown__menu__item" href="#">Dresses</a>
-              <a class="dropdown__menu__item" href="#">Tops</a>
-              <a class="dropdown__menu__item" href="#">Sweaters/Knits</a>
-              <a class="dropdown__menu__item" href="#">Jackets/Coats</a>
-              <a class="dropdown__menu__item" href="#">Blazers</a>
-              <a class="dropdown__menu__item" href="#">Denim</a>
-              <a class="dropdown__menu__item" href="#">Leggings/Pants</a>
-              <a class="dropdown__menu__item" href="#">Skirts/Shorts</a>
-              <a class="dropdown__menu__item" href="#">Accessories</a>
-              <a class="dropdown__menu__item" href="#">Bags/Purses</a>
-              <a class="dropdown__menu__item" href="#">Swimwear/Underwear</a>
-              <a class="dropdown__menu__item" href="#">Nightwear</a>
-              <a class="dropdown__menu__item" href="#">Shoes</a>
-              <a class="dropdown__menu__item" href="#">Beauty</a>
-              <h3 class="dropdown__menu__heading">men</h3>
-              <a class="dropdown__menu__item" href="#">Tees/Tank tops</a>
-              <a class="dropdown__menu__item" href="#">Shirts/Polos</a>
-              <a class="dropdown__menu__item" href="#">Sweaters</a>
-              <a class="dropdown__menu__item" href="#">Sweatshirts/Hoodies</a>
-              <a class="dropdown__menu__item" href="#">Blazers</a>
-              <a class="dropdown__menu__item" href="#">Jackets/vests</a>
+              <h3 class="dropdown__menu_heading">women</h3>
+              <a class="dropdown__menu_item" href="#">Dresses</a>
+              <a class="dropdown__menu_item" href="#">Tops</a>
+              <a class="dropdown__menu_item" href="#">Sweaters/Knits</a>
+              <a class="dropdown__menu_item" href="#">Jackets/Coats</a>
+              <a class="dropdown__menu_item" href="#">Blazers</a>
+              <a class="dropdown__menu_item" href="#">Denim</a>
+              <a class="dropdown__menu_item" href="#">Leggings/Pants</a>
+              <a class="dropdown__menu_item" href="#">Skirts/Shorts</a>
+              <a class="dropdown__menu_item" href="#">Accessories</a>
+              <a class="dropdown__menu_item" href="#">Bags/Purses</a>
+              <a class="dropdown__menu_item" href="#">Swimwear/Underwear</a>
+              <a class="dropdown__menu_item" href="#">Nightwear</a>
+              <a class="dropdown__menu_item" href="#">Shoes</a>
+              <a class="dropdown__menu_item" href="#">Beauty</a>
+              <h3 class="dropdown__menu_heading">men</h3>
+              <a class="dropdown__menu_item" href="#">Tees/Tank tops</a>
+              <a class="dropdown__menu_item" href="#">Shirts/Polos</a>
+              <a class="dropdown__menu_item" href="#">Sweaters</a>
+              <a class="dropdown__menu_item" href="#">Sweatshirts/Hoodies</a>
+              <a class="dropdown__menu_item" href="#">Blazers</a>
+              <a class="dropdown__menu_item" href="#">Jackets/vests</a>
             </div>
           </details>
           <input class="header__text" type=search placeholder="Search for Item...">
-          <button class="button__search"><img class="button__lens" src="./build/img/search-solid.svg" alt="search">
+          <button class="header__button-search"><img class="header__button-lens" src="./build/img/search-solid.svg"
+              alt="search">
           </button>
         </form>
       </div>
@@ -58,7 +59,8 @@
       </div>
     </div>
   </header>
-  <nav class="header__nav">
+
+  <nav class="header-nav">
     <div class="container">
       <ul class="menu">
         <li class="menu__list"><a href="index.html" class="menu__link"></a>Home</li>
@@ -196,105 +198,122 @@
     </div>
   </div>
 
-  <section class="product__promo">
+  <section class="product-promo">
     <div class="container">
-      <div class="product__promo__content">
-        <div class="product__promo__menu">
-          <details class="product__promo__menu__list">
-            <summary class="product__promo__menu__link">Category</summary>
-            <div class="dropdown__menu product__promo__dropdown">
-              <a class="dropdown__menu__item" href="#">Accessories</a>
-              <a class="dropdown__menu__item" href="#">Bags</a>
-              <a class="dropdown__menu__item" href="#">Denim</a>
-              <a class="dropdown__menu__item" href="#">Hoodies & Sweatshirts</a>
-              <a class="dropdown__menu__item" href="#">Jackets & Coats</a>
-              <a class="dropdown__menu__item" href="#">Pants</a>
-              <a class="dropdown__menu__item" href="#">Polos</a>
-              <a class="dropdown__menu__item" href="#">Shirts</a>
-              <a class="dropdown__menu__item" href="#">Shoes</a>
-              <a class="dropdown__menu__item" href="#">Shorts</a>
-              <a class="dropdown__menu__item" href="#">Sweaters & Knits</a>
-              <a class="dropdown__menu__item" href="#">T-Shirts</a>
-              <a class="dropdown__menu__item" href="#">Tanks</a>
+      <div class="product-promo__content">
+        <div class="product-promo__menu">
+          <details class="product-promo__menu_list">
+            <summary class="product-promo__menu_link">Category</summary>
+            <div class="dropdown__menu product-promo__dropdown">
+              <a class="dropdown__menu_item" href="#">Accessories</a>
+              <a class="dropdown__menu_item" href="#">Bags</a>
+              <a class="dropdown__menu_item" href="#">Denim</a>
+              <a class="dropdown__menu_item" href="#">Hoodies & Sweatshirts</a>
+              <a class="dropdown__menu_item" href="#">Jackets & Coats</a>
+              <a class="dropdown__menu_item" href="#">Pants</a>
+              <a class="dropdown__menu_item" href="#">Polos</a>
+              <a class="dropdown__menu_item" href="#">Shirts</a>
+              <a class="dropdown__menu_item" href="#">Shoes</a>
+              <a class="dropdown__menu_item" href="#">Shorts</a>
+              <a class="dropdown__menu_item" href="#">Sweaters & Knits</a>
+              <a class="dropdown__menu_item" href="#">T-Shirts</a>
+              <a class="dropdown__menu_item" href="#">Tanks</a>
             </div>
           </details>
-          <details class="product__promo__menu__list">
-            <summary class="product__promo__menu__link">Brand</summary>
-            <div class="dropdown__menu product__promo__dropdown">
-              <a class="dropdown__menu__item" href="#">Accessories</a>
-              <a class="dropdown__menu__item" href="#">Bags</a>
-              <a class="dropdown__menu__item" href="#">Denim</a>
-              <a class="dropdown__menu__item" href="#">Hoodies & Sweatshirts</a>
-              <a class="dropdown__menu__item" href="#">Jackets & Coats</a>
-              <a class="dropdown__menu__item" href="#">Pants</a>
-              <a class="dropdown__menu__item" href="#">Polos</a>
-              <a class="dropdown__menu__item" href="#">Shirts</a>
-              <a class="dropdown__menu__item" href="#">Shoes</a>
-              <a class="dropdown__menu__item" href="#">Shorts</a>
-              <a class="dropdown__menu__item" href="#">Sweaters & Knits</a>
-              <a class="dropdown__menu__item" href="#">T-Shirts</a>
-              <a class="dropdown__menu__item" href="#">Tanks</a>
+          <details class="product-promo__menu_list">
+            <summary class="product-promo__menu_link">Brand</summary>
+            <div class="dropdown__menu product-promo__dropdown">
+              <a class="dropdown__menu_item" href="#">Accessories</a>
+              <a class="dropdown__menu_item" href="#">Bags</a>
+              <a class="dropdown__menu_item" href="#">Denim</a>
+              <a class="dropdown__menu_item" href="#">Hoodies & Sweatshirts</a>
+              <a class="dropdown__menu_item" href="#">Jackets & Coats</a>
+              <a class="dropdown__menu_item" href="#">Pants</a>
+              <a class="dropdown__menu_item" href="#">Polos</a>
+              <a class="dropdown__menu_item" href="#">Shirts</a>
+              <a class="dropdown__menu_item" href="#">Shoes</a>
+              <a class="dropdown__menu_item" href="#">Shorts</a>
+              <a class="dropdown__menu_item" href="#">Sweaters & Knits</a>
+              <a class="dropdown__menu_item" href="#">T-Shirts</a>
+              <a class="dropdown__menu_item" href="#">Tanks</a>
             </div>
           </details>
-          <details class="product__promo__menu__list">
-            <summary class="product__promo__menu__link">designer</summary>
-            <div class="dropdown__menu product__promo__dropdown">
-              <a class="dropdown__menu__item" href="#">Accessories</a>
-              <a class="dropdown__menu__item" href="#">Bags</a>
-              <a class="dropdown__menu__item" href="#">Denim</a>
-              <a class="dropdown__menu__item" href="#">Hoodies & Sweatshirts</a>
-              <a class="dropdown__menu__item" href="#">Jackets & Coats</a>
-              <a class="dropdown__menu__item" href="#">Pants</a>
-              <a class="dropdown__menu__item" href="#">Polos</a>
-              <a class="dropdown__menu__item" href="#">Shirts</a>
-              <a class="dropdown__menu__item" href="#">Shoes</a>
-              <a class="dropdown__menu__item" href="#">Shorts</a>
-              <a class="dropdown__menu__item" href="#">Sweaters & Knits</a>
-              <a class="dropdown__menu__item" href="#">T-Shirts</a>
-              <a class="dropdown__menu__item" href="#">Tanks</a>
+          <details class="product-promo__menu_list">
+            <summary class="product-promo__menu_link">designer</summary>
+            <div class="dropdown__menu product-promo__dropdown">
+              <a class="dropdown__menu_item" href="#">Accessories</a>
+              <a class="dropdown__menu_item" href="#">Bags</a>
+              <a class="dropdown__menu_item" href="#">Denim</a>
+              <a class="dropdown__menu_item" href="#">Hoodies & Sweatshirts</a>
+              <a class="dropdown__menu_item" href="#">Jackets & Coats</a>
+              <a class="dropdown__menu_item" href="#">Pants</a>
+              <a class="dropdown__menu_item" href="#">Polos</a>
+              <a class="dropdown__menu_item" href="#">Shirts</a>
+              <a class="dropdown__menu_item" href="#">Shoes</a>
+              <a class="dropdown__menu_item" href="#">Shorts</a>
+              <a class="dropdown__menu_item" href="#">Sweaters & Knits</a>
+              <a class="dropdown__menu_item" href="#">T-Shirts</a>
+              <a class="dropdown__menu_item" href="#">Tanks</a>
             </div>
           </details>
         </div>
-        <div class="product__promo__price">
-          <div class="product__promo__price__filter">
-            <div class="product__promo__price__filter__trending">
-              <p class="product__promo__price__filter__paragraph">Trending now</p>
-              <div class="product__promo__price__filter__list">
-                <a href="#" class="product__promo__price__filter__link">Bohemian</a>
-                <a href="#" class="product__promo__price__filter__link">Floral</a>
-                <a href="#" class="product__promo__price__filter__link">Lace</a>
-                <a href="#" class="product__promo__price__filter__link">Floral</a>
-                <a href="#" class="product__promo__price__filter__link">Lace</a>
-                <a href="#" class="product__promo__price__filter__link">Bohemian</a>
+        <div class="product-promo__price">
+          <div class="product-promo__price_filter">
+            <div class="product-promo__price_filter-trending">
+              <p class="product-promo__price_filter-paragraph">Trending now</p>
+              <div class="product-promo__price_list">
+                <a href="#" class="product-promo__price_link">Bohemian</a>
+                <a href="#" class="product-promo__price_link">Floral</a>
+                <a href="#" class="product-promo__price_link">Lace</a>
+                <a href="#" class="product-promo__price_link">Floral</a>
+                <a href="#" class="product-promo__price_link">Lace</a>
+                <a href="#" class="product-promo__price_link">Bohemian</a>
               </div>
             </div>
-            <div class="product__promo__price__filter__size">
-              <p class="product__promo__price__filter__paragraph">size</p>
-              <div class="product__promo__price__filter__list">
-                <p><input type="checkbox" name="a" value="">XXS</p>
-                <p><input type="checkbox" name="a" value="XL">XS</p>
-                <p><input type="checkbox" name="a" value="XL">S</p>
-                <p><input type="checkbox" name="a" value="XL">M</p>
-                <p><input type="checkbox" name="a" value="XL">L</p>
-                <p><input type="checkbox" name="a" value="XL">XL</p>
-                <p><input type="checkbox" name="a" value="XL">XXL</p>
+            <div class="product-promo__price_filter-size">
+              <p class="product-promo__price_filter-paragraph">size</p>
+              <div class="product-promo__price_list product-promo__price_list1">
+                <label class="product-promo__price_link control control-checkbox">XXS<input type="checkbox" name"a"" />
+                  <div class="control_indicator"></div>
+                </label>
+                <label class="product-promo__price_link control control-checkbox">XS<input type="checkbox" />
+                  <div class="control_indicator"></div>
+                </label>
+                <label class="product-promo__price_link control control-checkbox">S<input type="checkbox" />
+                  <div class="control_indicator"></div>
+                </label>
+                <label class="product-promo__price_link control control-checkbox">M<input type="checkbox" />
+                  <div class="control_indicator"></div>
+                </label>
+                <label class="product-promo__price_link control control-checkbox">L<input type="checkbox" />
+                  <div class="control_indicator"></div>
+                </label>
+                <label class="product-promo__price_link control control-checkbox">XL<input type="checkbox" />
+                  <div class="control_indicator"></div>
+                </label>
+                <label class="product-promo__price_link control control-checkbox">XXL<input type="checkbox" />
+                  <div class="control_indicator">
+                  </div>
+                </label>
+
               </div>
             </div>
-            <div class="product__promo__price__filter__price">
-              <p class="product__promo__price__filter__paragraph">price</p>
+            <div class="product-promo__price_filter-price">
+              <p class="product-promo__price_filter-paragraph">price</p>
               <input type="range" min="0" max="100" step="1" value="50">
             </div>
-            <div class="product__promo__price__sort">
-              <p class="product__promo__price__paragraph">Sort By</p>
-              <details class="product__promo__price__sortby">
-                <summary class="product__promo__price__summary1">Name</summary>
+            <div class="product-promo__price_sort">
+              <p class="product-promo__price_paragraph-sort">Sort By</p>
+              <details class="product-promo__price_sortby">
+                <summary class="product-promo__price_summary1">Name</summary>
               </details>
-              <p class="product__promo__price__paragraph">Show</p>
-              <details class="product__promo__price__sortby">
-                <summary class="product__promo__price__summary2">09</summary>
+              <p class="product-promo__price_paragraph-sort">Show</p>
+              <details class="product-promo__price_sortby">
+                <summary class="product-promo__price_summary2">09</summary>
               </details>
             </div>
           </div>
+
           <div class="cards__item">
             <a class="cards__link" href="product.html">
               <img class="cards__img" src="./build/img/card9.png" alt="card">
@@ -505,7 +524,7 @@
         <div class="footer__item">
           <div class="footer__item__logo">
             <a class="" href="#"><img src="./build/img/logo.png" alt="logo"></a>
-            <a class="logo__text" href="#">BRAN<span class="other-color">D</span></a>
+            <a class="header__logo" href="#">BRAN<span class="header__logo_other-color">D</span></a>
           </div>
           <p class="footer__item__text">Objectively transition extensive data rather than cross functional
             solutions. Monotonectally
