--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
                         <summary class="header__summary-search">Browse</summary>
                         <div class="dropdown__menu">
                             <h3 class="dropdown__menu_heading">women</h3>
-                            <a class="dropdown__menu_item" href="#">Dresses</a>
-                            <a class="dropdown__menu_item" href="#">Tops</a>
-                            <a class="dropdown__menu_item" href="#">Sweaters/Knits</a>
-                            <a class="dropdown__menu_item" href="#">Jackets/Coats</a>
-                            <a class="dropdown__menu_item" href="#">Blazers</a>
-                            <a class="dropdown__menu_item" href="#">Denim</a>
-                            <a class="dropdown__menu_item" href="#">Leggings/Pants</a>
-                            <a class="dropdown__menu_item" href="#">Skirts/Shorts</a>
-                            <a class="dropdown__menu_item" href="#">Accessories</a>
-                            <a class="dropdown__menu_item" href="#">Bags/Purses</a>
-                            <a class="dropdown__menu_item" href="#">Swimwear/Underwear</a>
-                            <a class="dropdown__menu_item" href="#">Nightwear</a>
-                            <a class="dropdown__menu_item" href="#">Shoes</a>
-                            <a class="dropdown__menu_item" href="#">Beauty</a>
+                            <a class="dropdown__menu_item" href="single.html">Dresses</a>
+                            <a class="dropdown__menu_item" href="single.html">Tops</a>
+                            <a class="dropdown__menu_item" href="single.html">Sweaters/Knits</a>
+                            <a class="dropdown__menu_item" href="single.html">Jackets/Coats</a>
+                            <a class="dropdown__menu_item" href="single.html">Blazers</a>
+                            <a class="dropdown__menu_item" href="single.html">Denim</a>
+                            <a class="dropdown__menu_item" href="single.html">Leggings/Pants</a>
+                            <a class="dropdown__menu_item" href="single.html">Skirts/Shorts</a>
+                            <a class="dropdown__menu_item" href="single.html">Accessories</a>
+                            <a class="dropdown__menu_item" href="single.html">Bags/Purses</a>
+                            <a class="dropdown__menu_item" href="single.html">Swimwear/Underwear</a>
+                            <a class="dropdown__menu_item" href="single.html">Nightwear</a>
+                            <a class="dropdown__menu_item" href="single.html">Shoes</a>
+                            <a class="dropdown__menu_item" href="single.html">Beauty</a>
                             <h3 class="dropdown__menu_heading">men</h3>
                             <a class="dropdown__menu_item" href="#">Tees/Tank tops</a>
                             <a class="dropdown__menu_item" href="#">Shirts/Polos</a>
