--- a/product.html
+++ b/product.html
@@ -301,16 +301,23 @@
             <div class="product-promo__price_filter-price">
               <p class="product-promo__price_filter-paragraph">price</p>
               <input type="range" min="0" max="100" step="1" value="50">
+              <div class="product-promo__price_cent1">$52</div>
+              <div class="product-promo__price_cent2">$100</div>
             </div>
             <div class="product-promo__price_sort">
-              <p class="product-promo__price_paragraph-sort">Sort By</p>
-              <details class="product-promo__price_sortby">
-                <summary class="product-promo__price_summary1">Name</summary>
-              </details>
-              <p class="product-promo__price_paragraph-sort">Show</p>
-              <details class="product-promo__price_sortby">
-                <summary class="product-promo__price_summary2">09</summary>
-              </details>
+              <div class="product-promo__price_block">
+                <p class="product-promo__price_paragraph-sort">Sort By</p>
+                <details class="product-promo__price_sortby">
+                  <summary class="product-promo__price_summary1">Name</summary>
+                </details>
+              </div>
+              <div class="product-promo__price_block">
+                <p class="product-promo__price_paragraph-sort">Show</p>
+                <details class="product-promo__price_sortby">
+                  <summary class="product-promo__price_summary2">09</summary>
+                </details>
+              </div>
+
             </div>
           </div>
 
